addinh speed pad functionailty

--- a/src/main/resources/assets/mod_simply/lang/en_US.lang
+++ b/src/main/resources/assets/mod_simply/lang/en_US.lang
@@ -1,2 +1,2 @@
-tile.block_speed_pad_unlocalised_name.name=Speed Pad
+tile.speed_pad.name=Speed Pad
 tile.mbe01_block_simple_unlocalised_name.name=MBE01 Block Simple
