adding testing particle

--- a/src/main/resources/assets/mod_simply/lang/en_US.lang
+++ b/src/main/resources/assets/mod_simply/lang/en_US.lang
@@ -1,2 +1,3 @@
 tile.speed_pad.name=Speed Pad
 tile.mbe01_block_simple_unlocalised_name.name=MBE01 Block Simple
+tile.mbe50_block_flame_emitter_unlocalised_name.name=MBE50 Particle flame emitter
